--- a/mypage_couponlist.html
+++ b/mypage_couponlist.html
@@ -56,7 +56,7 @@ $(document).ready(function(){
 			</div><!-- end : id : visual -->
 
 			<div id="contents">
-				<h2 class="hide">컨텐츠</h2>
+				<h2 class="hide">컨텐츠_test</h2>
 				<div class="sub_contents">
 					<h3 class="sub_Title">
 						<a href="javascript:history.back()" class="back"><img src="img/v3/btn/btn_back.jpg" alt="이전페이지 가기" /></a>
